# DSAnnotation

./: ASTVisitor.cpp  ASTVisitor.h  CMakeLists.txt  Component.cpp  Component.h  ComponentParser.cpp  ComponentParser.h  ErrorCollector.cpp  ErrorCollector.h  ErrorReporter.cpp  ErrorReporter.h  JsonGenerator.cpp  JsonGenerator.h  ManifestMerger.cpp  ManifestMerger.h  PropertyParser.cpp  PropertyParser.h  README.md  Reference.cpp  Reference.h  ReferenceParser.cpp  ReferenceParser.h  SyntaxChecker.cpp  SyntaxChecker.h  main.cpp  manifest.json  migration-notes.md
.github/workflows/: build_and_test_nix.yml  build_and_test_windows.yml  code-coverage.yml
app/: main.cpp
include/DSAnnotation/Config/: ParserConfig.h
include/DSAnnotation/Core/: Component.h  Error.h
include/DSAnnotation/Parsing/: ASTVisitor.h  AnnotationValidator.h  ComponentParser.h  IAnnotationValidator.h  IComponentParser.h  PropertyParser.h  ReferenceParser.h
include/DSAnnotation/Serialization/: IManifestBuilder.h  IManifestMerger.h  IManifestWriter.h  JsonManifestBuilder.h
include/DSAnnotation/Support/: ErrorReporter.h  ISyntaxChecker.h  LocalFileSystem.h  SyntaxChecker.h
include/dsannotation/config/: ParserConfig.h
include/dsannotation/core/: Component.h  ErrorCollector.h  Reference.h  Result.h
include/dsannotation/parsing/: ASTVisitor.h  AnnotationTypes.h  AnnotationValidator.h  ComponentParser.h  IAnnotationValidator.h  IComponentParser.h  IPropertyParser.h  IReferenceParser.h  PropertyParser.h  ReferenceParser.h
include/dsannotation/serialization/: IManifestBuilder.h  IManifestWriter.h  JsonManifestBuilder.h  JsonManifestWriter.h  ManifestMerger.h
include/dsannotation/support/: ErrorReporter.h  IFileSystem.h  LocalFileSystem.h  SourceLocationInfo.h
src/Core/: Component.cpp  ErrorCollector.cpp  Reference.cpp
src/Parsing/: ASTVisitor.cpp  AnnotationValidator.cpp  ComponentParser.cpp  PropertyParser.cpp  ReferenceParser.cpp
src/Serialization/: JsonManifestBuilder.cpp  JsonManifestWriter.cpp  ManifestMerger.cpp
src/Support/: ErrorReporter.cpp  LocalFileSystem.cpp  SyntaxChecker.cpp
src/core/: Component.cpp  ErrorCollector.cpp  Reference.cpp
src/parsing/: ASTVisitor.cpp  AnnotationValidator.cpp  ComponentParser.cpp  PropertyParser.cpp  ReferenceParser.cpp
src/serialization/: JsonManifestBuilder.cpp  JsonManifestWriter.cpp  ManifestMerger.cpp
src/support/: ErrorReporter.cpp  LocalFileSystem.cpp
tests/: AnnotationValidatorTest.cpp  CMakeLists.txt  ComponentParserTest.cpp  PropertyParserTest.cpp
